feat: implement plugin UI management with repository configuration panel